<resources>
    <string name="app_name">ProjectV2_Android</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_class_name">Entrer le nom de la classe</string>
    <string name="add_class">Ajouter la classe</string>
    <string name="enter_student_first_name">Prénom de l\'étudiant</string>
    <string name="enter_student_last_name">Nom de l\'étudiant</string>
    <string name="enter_student_matricule">Matricule de l\'étudiant</string>
    <string name="add_student">Ajouter l\'étudiant</string>
    <string name="enter_evaluation_name">Nom de l\'évaluation</string>
    <string name="enter_points_max">Points max de l\'évaluation</string>
    <string name="has_sub_evaluations">Ajouter des sous évaluations</string>
    <string name="add_evaluation">Ajouter l\'évaluation</string>
    <string name="student_name">Nom de l\'étudiant</string>
    <string name="enter_student_note">Entrez une note</string>
    <string name="save_note">Sauvegarder la note</string>
    <string name="enter_force_average">Entrez la note à forcer</string>
    <string name="force_average">Forcer la note</string>
    <string name="view_evaluations">Voir évaluations</string>
    <string name="view_students">Voir étudiants</string>
    <string name="error_fill_all_fields">Veuillez remplir tous les champs</string>
    <string name="evaluation_list_title">Évaluations du %s</string>
    <string name="student_added_successfully">Étudiant ajouté avec succès</string>
    <string name="error_adding_student">Erreur lors de l\'ajout de l\'étudiant</string>
    <string name="leaf_evaluation">Feuille d\'évaluation</string>
    <string name="parent_evaluation">Évaluation parent</string>
    <string name="error_initializing_dependencies">Erreur initialization des dépendances</string>
    <string name="force_note_title">Forcer la note</string>
    <string name="cancel">Annuler</string>
    <string name="error_invalid_number">Nombre invalide</string>
    <string name="error_invalid_note_range">Veuillez entrer une note entre %1$d et %2$d.</string>
    <string name="student_detail_title">Évaluations de %s</string>
</resources>