<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/input_evaluation_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_evaluation_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/input_evaluation_points_max"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_points_max"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/checkbox_has_sub_evaluations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/has_sub_evaluations" />

    <Button
        android:id="@+id/btn_add_evaluation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_evaluation" />
</LinearLayout>
