<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/text_student_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/student_name"
        android:textSize="16sp"
        android:paddingBottom="8dp" />

    <EditText
        android:id="@+id/input_student_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_student_note"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/btn_save_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_note" />
</LinearLayout>
